<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:title="@string/action_share"
        android:icon="@drawable/ic_action_share"
        android:orderInCategory="101"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_login"
        android:title="@string/action_login"
        android:icon="@drawable/ic_action_login"
        android:orderInCategory="102"
        app:showAsAction="never"/>

</menu>
