<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/landscape"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <!--
    android:fontFamily="sans-serif"           // roboto regular
    android:fontFamily="sans-serif-light"     // roboto light
    android:fontFamily="sans-serif-condensed" // roboto condensed
    android:fontFamily="sans-serif-thin"      // roboto thin (android 4.2)
    android:fontFamily="sans-serif-medium"    // roboto medium (android 5.0)
    -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="32sp"
                android:textColor="@color/grey_800"
                android:shadowColor="@color/grey_700"
                android:layout_marginBottom="24dp"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:fontFamily="sans-serif-light" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/gpsLayout"
            android:orientation="horizontal"
            android:layout_marginBottom="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/pin_lime_2"
                android:contentDescription="@string/access_step_1"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textViewStep1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/step_1"
                android:textSize="24sp"
                android:textColor="@color/grey_800"
                android:shadowColor="@color/grey_700"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:fontFamily="sans-serif-light"
                android:layout_weight="1" />

        </LinearLayout>

    <LinearLayout
        android:id="@+id/loginLayout"
        android:orientation="horizontal"
        android:layout_marginBottom="24dp"
        android:background="@color/text_shadow_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView3"
            android:src="@drawable/pin_teal_2"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/access_step_2"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textViewStep2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/step_2"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:shadowColor="@color/grey_700"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:fontFamily="sans-serif-light"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginBottom="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView4"
            android:src="@drawable/pin_teal_2"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/access_step_3"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textViewStep3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/step_3"
            android:textSize="24sp"
            android:textColor="@color/grey_800"
            android:shadowColor="@color/grey_700"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:fontFamily="sans-serif-light"
            android:layout_weight="1" />

    </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button_send_alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_alert_button"
        android:background="@color/blue_200"
        android:paddingRight="12dp"
        android:paddingLeft="12dp"
        android:layout_above="@+id/floatingActionButton"
        android:layout_centerHorizontal="true" />

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/snackbarPosition"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_action_share"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="12dp"
        app:rippleColor="@color/blue_700"
        app:borderWidth="0dp"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"/>

</RelativeLayout>
