<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/grey_200"
    tools:context="cl.exec.dev.android.aif.activity.LoginActivity">

    <!--
    android:fontFamily="sans-serif"           // roboto regular
    android:fontFamily="sans-serif-light"     // roboto light
    android:fontFamily="sans-serif-condensed" // roboto condensed
    android:fontFamily="sans-serif-thin"      // roboto thin (android 4.2)
    android:fontFamily="sans-serif-medium"    // roboto medium (android 5.0)
    -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_text"
        android:textColor="@color/grey_900"
        android:fontFamily="sans-serif-thin"
        android:textSize="24sp"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/button_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_facebook"
        android:background="@color/facebook_blue_button"
        android:fontFamily="sans-serif-light"
        android:textColor="@color/white"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp" />

    <Button
        android:id="@+id/button_twitter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_twitter"
        android:background="@color/twitter_blue_button"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-light"
        android:layout_below="@+id/button_facebook"
        android:layout_alignRight="@+id/button_facebook"
        android:layout_alignEnd="@+id/button_facebook"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/button_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_google"
        android:background="@color/google_red_button"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-light"
        android:layout_below="@+id/button_twitter"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"/>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/snackBar"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
    </android.support.design.widget.CoordinatorLayout>

</RelativeLayout>
